--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </title>
 
   <body>
-    <h1> This is my 1st github page </h1>
+    <h1> Personal web site </h1>
+    <a href="https://www.w3schools.com">This is a link</a>
   </body>
   
   <style>
