--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <body>
     <h1> This is my 1st github page </h1>
+    <a href="https://www.w3schools.com">This is a link</a>
   </body>
   
   <style>
