--- a/index.html
+++ b/index.html
@@ -1,20 +1,43 @@
 
-<html>
-  <title>
-    First website
-  </title>
 
-  <body>
-    <h1> Personal web site </h1>
-    <a href="https://www.w3schools.com">This is a link</a>
-  </body>
-  
-  <style>
-    body {
-      background-color:green;
-      color:#fff;
-      text-align:center;
-    }
-    </style>
-  
-  </html>
+<html>
+<head>
+<title>Mohammad Sarraf Joshaghani's Webpage</title>
+</head>
+<body style="background-color:white">
+<h1><center>Mohammad Sarraf Joshaghani</center></h1>
+<blockquote>
+  <a href="index.html">Home</a> | 
+  <a href="gallery.html">Gallery of Research</a> |
+  <a href="publications.html">Publications</a> |
+  <a href="personal.html">Personal Interests</a>
+</blockquote>
+<hr>
+<table border=0>
+<tr><td valign="top">
+<img src="Figures/mugshot.jpg" hspace="20" width=166px height=297px></td>
+<td valign="top">My name is Mohammad Sarraf Joshaghani, and I am currently a
+PhD student in the Department of Civil and Environmental at University of 
+Houston. I am part of the Computational and Applied Mechanics Laboratory (CAML) research group under the supervision of Professor 
+<a href="http://www.cive.uh.edu/faculty/nakshatrala" target="_blank">Kalyana Babu Nakshatrala</a>. 
+
+<p>
+My research interests include the following:
+<ol>
+<li>Computational Mechanics</li>
+<li>Subsurface flow and transport modeling</li>
+<li>High performance and parallel computing</li>
+<li>Finite element methods</li>
+<li>Solvers and preconditioners</li>
+
+</ol>
+<a href="Files/Sarraf_CV.pdf" target="_blank">CV</a> | <a href="https://scholar.google.com/citations?user=lHTG0A4AAAAJ&hl=en" target="_blank">Google scholar</a>
+</p>
+</td>
+</tr>
+</table>
+<hr>
+<blockquote>
+</body>
+</html>
+
