--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 <tr><td valign="top">
 <img src="Figures/mugshot.jpg" hspace="20" width=166px height=297px></td>
 <td valign="top">My name is Mohammad Sarraf Joshaghani, and I am currently a
-PhD student in the Department of Civil and Environmental at University of 
-Houston. I am part of the Computational and Applied Mechanics Laboratory (CAML) research group under the supervision of Professor 
-<a href="http://www.cive.uh.edu/faculty/nakshatrala" target="_blank">Kalyana Babu Nakshatrala</a>. 
+Postdoctoral Research Associate in the Department of Computational and Applied Mathematics (CAAM)
+at Rice University working under the supervision of Professor 
+<a href="https://caamweb.rice.edu/beatrice-m-riviere" target="_blank">Beatrice M. Riviere</a>. 
+I obtained my PhD in Civil Engineering from the University of Houston and 
+was previously part of the Computational and Applied Mechanics Laboratory (CAML) research group under the supervision of Professor 
+<a href="http://www.cive.uh.edu/faculty/nakshatrala" target="_blank">Kalyana B. Nakshatrala</a>. 
 
 <p>
 My research interests include the following:
