--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
-
-<html>
-<head>
+<html> 
+<head><script type="text/javascript" src="http://livejs.com/live.js"></script>
 <title>Mohammad Sarraf Joshaghani's Webpage</title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
-<body style="background-color:white">
+<body style="background-color:whiteSmoke">
 <h1><center>Mohammad Sarraf Joshaghani</center></h1>
 <blockquote>
   <a href="index.html">Home</a> | 
@@ -16,10 +15,11 @@
 <table border=0>
 <tr><td valign="top">
 <img src="Figures/mugshot.jpg" hspace="20" width=166px height=297px></td>
-<td valign="top">My name is Mohammad Sarraf Joshaghani, and I am currently a
+<td valign="top">
+My name is Mohammad Sarraf Joshaghani, and I am currently a
 Postdoctoral Research Associate in the Department of Computational and Applied Mathematics (CAAM)
 at Rice University working under the supervision of Professor 
-<a href="https://caamweb.rice.edu/beatrice-m-riviere" target="_blank">Beatrice M. Riviere</a>. 
+<a href="https://profiles.rice.edu/faculty/beatrice-riviere" target="_blank">Beatrice M. Riviere</a>. 
 I obtained my PhD in Civil Engineering from the University of Houston and 
 was previously part of the Computational and Applied Mechanics Laboratory (CAML) research group under the supervision of Professor 
 <a href="http://www.cive.uh.edu/faculty/nakshatrala" target="_blank">Kalyana B. Nakshatrala</a>. 
@@ -30,7 +30,7 @@ My research interests include the following:
 <li>Computational Mechanics</li>
 <li>Subsurface flow and transport modeling</li>
 <li>High performance and parallel computing</li>
-<li>Finite element methods</li>
+<li> Numerical methods</li>
 <li>Solvers and preconditioners</li>
 
 </ol>
