--- a/Publications.html
+++ b/Publications.html
@@ -14,12 +14,18 @@
 <hr>
 <h2>Journal Publications</h2>
 <ol>
+<li>
+<b>M. S. Joshaghani</b>, and K. B. Nakshatrala,
+"A modeling framework for coupling plasticity with species diffusion",
+submitted to <b>Computer Methods in Applied Mechanics and Engineering Journal</b>, 2020 
+[<a href="https://arxiv.org/abs/2011.06652" target="_blank">arXiv link</a>] </li>
+</li>
+<!--  -->
+<!--  -->
 <li> <b>M. S. Joshaghani</b>,
 J. Chang, K. B. Nakshatrala, and M. G. Knepley,
-<a 
-href="https://www.sciencedirect.com/science/article/pii/S0021999119301378" target="_blank">
-  "On composable block solvers and performance spectrum analysis for double porosity/permeability model" 
-</a>, <b>Journal of Computational Physic</b>,
+<a href="https://www.sciencedirect.com/science/article/pii/S0021999119301378" target="_blank">
+  "On composable block solvers and performance spectrum analysis for double porosity/permeability model"</a>, <b>Journal of Computational Physic</b>,
 <b>386:</b> 428-466, 2019
 [<a 
 href="https://arxiv.org/abs/1808.08328" target="_blank">arXiv link</a>] </li>
@@ -30,17 +36,14 @@ href="https://arxiv.org/abs/1808.08328" target="_blank">arXiv link</a>] </li>
   "On interface conditions for flows in coupled free-porous media" </a>,
 <b>Transport in Porous Media</b>, <b>130:</b> 577-609, 2019  
 [<a
-href="https://arxiv.org/abs/1902.02510" target="_blank">
-arXiv link</a>] </li>
+href="https://arxiv.org/abs/1902.02510" target="_blank">arXiv link</a>] </li>
 <!--  -->
 <!--  -->
 <li><b> M. S. Joshaghani</b>, S. H. Joodat, and K. B. Nakshatrala,
 <a href="https://www.sciencedirect.com/science/article/pii/S0045782519302075?dgcid=author" target="-blank">
-  "A stabilized mixed discontinuous Galerkin formulation for double porosity/permeability model"</a>,
-<b>Computer Methods in Applied Mechanics and Engineering Journal</b>, <b>352:</b> 508-560, 2019
+  "A stabilized mixed discontinuous Galerkin formulation for double porosity/permeability model"</a>, <b>Computer Methods in Applied Mechanics and Engineering Journal</b>, <b>352:</b> 508-560, 2019
 [<a
-href="https://arxiv.org/abs/1902.02510" target="_blank">
-arXiv link</a>] </li>
+href="https://arxiv.org/abs/1902.02510" target="_blank">arXiv link</a>] </li>
 <!--  -->
 <!--  -->
 <li>A. M. Raheem, C. Vipulanandan, and <b>M. S. Joshaghani</b>, 
@@ -92,13 +95,6 @@ arXiv link</a>] </li>
 <li>
 <b>M. S. Joshaghani</b>, B. Riviere, and M. Sekachev,
 "Maximum-principle-satisfying discontinuous galerkin methods for compressible two-phase immiscible flow"
-<i>in preparation</i>
-</li>
-<!--  -->
-<!--  -->
-<li>
-<b>M. S. Joshaghani</b>, and K. B. Nakshatrala,
-"A modeling framework for coupling plasticity with species diffusion" 
 <i>in preparation</i>
 </li>
 <!--  -->
