--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@ My research interests include the following:
 <li> Numerical methods</li>
 <li>Solvers and preconditioners</li>
 
+<!-- <ul> -->
+<!--   <li> -->
+    <!-- <a href="Files/Sarraf_PhD_Dissertation.pdf" target="_blank">PhD thesis</a> -->
+<!--   </li> -->
+<!-- </ul> --> 
+
 </ol>
-<a href="Files/Sarraf_CV.pdf" target="_blank">CV</a> | <a href="https://scholar.google.com/citations?user=lHTG0A4AAAAJ&hl=en" target="_blank">Google scholar</a>
+<a href="Files/Sarraf_CV.pdf" target="_blank">CV</a> |  <a href="Files/Sarraf_PhD_Dissertation.pdf" target="_blank">PhD thesis</a> | <a href="https://scholar.google.com/citations?user=lHTG0A4AAAAJ&hl=en" target="_blank">Google scholar</a>
 </p>
 </td>
 </tr>
