--- a/Publications.html
+++ b/Publications.html
@@ -7,9 +7,9 @@
 <h1><center>Publications</center></h1>
 <blockquote>
   <a href="index.html">Home</a> | 
-  <a href="gallery.html">Gallery of Research</a> |
+  <!-- <a href="gallery.html">Gallery of Research</a> | -->
   <a href="publications.html">Publications</a> |
-  <a href="personal.html">Personal Interests</a>
+  <!-- <a href="personal.html">Personal Interests</a> -->
 </blockquote>
 <hr>
 <h2>Journal Publications</h2>
