--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <blockquote>
   <a href="index.html">Home</a> | 
   <!-- <a href="gallery.html">Gallery of Research</a> | -->
-  <a href="publications.html">Publications</a> |
+  <a href="Publications.html">Publications</a> |
   <!-- <a href="personal.html">Personal Interests</a> -->
 </blockquote>
 <hr>
