new publication added

--- a/Publications.html
+++ b/Publications.html
@@ -15,6 +15,14 @@
 <h2>Journal Publications</h2>
 <ol>
 <li>
+<b>M. S. Joshaghani</b>, V. Girault, B. Riviere,
+"A vertex scheme for two-phase flow in heterogeneous media",
+submitted to <b>Journal of Computational Physics</b>, 2021 
+[<a href="https://arxiv.org/abs/2103.03285" target="_blank">arXiv link</a>] </li>
+</li>
+<!--  -->
+<!--  -->
+<li>
 <b>M. S. Joshaghani</b>, and K. B. Nakshatrala,
 "A modeling framework for coupling plasticity with species diffusion",
 submitted to <b>Computer Methods in Applied Mechanics and Engineering Journal</b>, 2020 
