--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <html> 
+  <style>
+    #advisor{
+    color:black;} 
+  </style>
 <head><script type="text/javascript" src="http://livejs.com/live.js"></script>
 <title>Mohammad Sarraf Joshaghani's Webpage</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
-<body style="background-color:whiteSmoke">
+<body>
+  <script type="text/javascript">
+      function toggle_visibility(id) {
+         var e = document.getElementById(id);
+         if(e.style.display == 'block')
+            e.style.display = 'none';
+         else
+            e.style.display = 'block';
+      }
+  </script>
 <h1><center>Mohammad Sarraf Joshaghani</center></h1>
 <blockquote>
   <a href="index.html">Home</a> | 
@@ -19,32 +32,31 @@
 My name is Mohammad Sarraf Joshaghani, and I am currently a
 Postdoctoral Research Associate in the Department of Computational and Applied Mathematics (CAAM)
 at Rice University working under the supervision of Professor 
-<a href="https://profiles.rice.edu/faculty/beatrice-riviere" target="_blank">Beatrice M. Riviere</a>. 
+<a href="https://profiles.rice.edu/faculty/beatrice-riviere" target="_blank" id="advisor">Beatrice M. Riviere</a>. 
 I obtained my PhD in Civil Engineering from the University of Houston and 
 was previously part of the Computational and Applied Mechanics Laboratory (CAML) research group under the supervision of Professor 
-<a href="http://www.cive.uh.edu/faculty/nakshatrala" target="_blank">Kalyana B. Nakshatrala</a>. 
+<a href="http://www.cive.uh.edu/faculty/nakshatrala" target="_blank" id="advisor">Kalyana B. Nakshatrala</a>. 
 
 <p>
 My research interests include the following:
 <ol>
-<li>Computational Mechanics</li>
+<li>Computational geoechanics</li>
 <li>Subsurface flow and transport modeling</li>
 <li>High performance and parallel computing</li>
 <li> Numerical methods</li>
 <li>Solvers and preconditioners</li>
-
-<!-- <ul> -->
-<!--   <li> -->
-    <!-- <a href="Files/Sarraf_PhD_Dissertation.pdf" target="_blank">PhD thesis</a> -->
-<!--   </li> -->
-<!-- </ul> --> 
-
 </ol>
-<a href="Files/Sarraf_CV.pdf" target="_blank">CV</a> |  <a href="Files/Sarraf_PhD_Dissertation.pdf" target="_blank">PhD thesis</a> | <a href="https://scholar.google.com/citations?user=lHTG0A4AAAAJ&hl=en" target="_blank">Google scholar</a>
-</p>
+<a href="Files/Sarraf_CV.pdf" target="_blank">CV</a> |  
+<a href="Files/Sarraf_PhD_Dissertation.pdf" target="_blank">PhD thesis</a> </p>
 </td>
 </tr>
 </table>
+<dl>
+  <dt><a href="mailto:m.sarraf.j@rice.edu" >Email</a> |
+<a href="https://github.com/msarrafj" target="_blank">Github</a> |
+<a href="https://scholar.google.com/citations?user=lHTG0A4AAAAJ&hl=en" target="_blank">Google scholar</a> </dt>
+</dl>
+</p>
 <blockquote>
 </body>
 </html>
