--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 My name is Mohammad Sarraf Joshaghani, and I am currently a
 Postdoctoral Research Associate in the Department of Computational and Applied Mathematics (CAAM)
 at Rice University working under the supervision of Professor 
-<a href="https://profiles.rice.edu/faculty/beatrice-riviere" target="_blank" id="advisor">Beatrice M. Riviere</a>. 
+<a href="http://compm.rice.edu/people-2/team/" target="_blank" id="advisor">Beatrice M. Riviere</a>. 
 I obtained my PhD in Civil Engineering from the University of Houston and 
 was previously part of the Computational and Applied Mechanics Laboratory (CAML) research group under the supervision of Professor 
 <a href="http://www.cive.uh.edu/faculty/nakshatrala" target="_blank" id="advisor">Kalyana B. Nakshatrala</a>. 
