--- a/Publications.html
+++ b/Publications.html
@@ -1,6 +1,7 @@
 <html>
 <head><script type="text/javascript" src="http://livejs.com/live.js"></script>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<link rel="stylesheet" type="text/css" href="Files/Sarraf.css">
 <title>Mohammad Sarraf Joshaghani's Webpage</title>
 </head>
 <body style="background-color:white">
@@ -13,12 +14,13 @@
             e.style.display = 'block';
       }
   </script>
-<h1><center>Publications</center></h1>
+<h2><center>Publications</center></h2>
 <blockquote>
   <a href="index.html">Home</a> | 
-  <!-- <a href="gallery.html">Gallery of Research</a> | -->
-  <a href="Publications.html">Publications</a> |
-  <!-- <a href="personal.html">Personal Interests</a> -->
+  <a href="Publications.html">PUBLICATIONS</a> |
+  <a href="research.html">Research</a> |
+  <a href="Codes.html">Codes</a> |
+  <a href="teaching.html">Teaching</a> 
 </blockquote>
 <hr>
 <h3>Preprints</h3>
@@ -107,7 +109,7 @@ This paper presents a modeling framework&#8212mathematical model and computation
 J. Chang, K. B. Nakshatrala, and M. G. Knepley,
 <a href="https://www.sciencedirect.com/science/article/pii/S0021999119301378" target="_blank">
   "On composable block solvers and performance spectrum analysis for double porosity/permeability model"</a>, <b>Journal of Computational Physic</b>,
-<b>386:</b> 428-466, 2019
+386: 428-466, 2019
 [<a 
 href="https://arxiv.org/abs/1808.08328" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('HPC19');">Abstract</a>]
@@ -134,8 +136,8 @@ publisher={Elsevier}
 
 <li>K. B. Nakshatrala and <b>M. S. Joshaghani</b>,
 <a href="https://link.springer.com/article/10.1007/s11242-019-01326-7" target="-blank">
-  "On interface conditions for flows in coupled free-porous media" </a>,
-<b>Transport in Porous Media</b>, <b>130:</b> 577-609, 2019  
+  "On interface conditions for flows in coupled free-porous media"</a>,
+<b>Transport in Porous Media</b>, 130: 577-609, 2019  
 [<a
 href="https://arxiv.org/abs/1902.02510" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('interface19');">Abstract</a>]
@@ -161,7 +163,7 @@ publisher={Springer}
 
 <li><b> M. S. Joshaghani</b>, S. H. Joodat, and K. B. Nakshatrala,
 <a href="https://www.sciencedirect.com/science/article/pii/S0045782519302075?dgcid=author" target="-blank">
-  "A stabilized mixed discontinuous Galerkin formulation for double porosity/permeability model"</a>, <b>Computer Methods in Applied Mechanics and Engineering Journal</b>, <b>352:</b> 508-560, 2019
+  "A stabilized mixed discontinuous Galerkin formulation for double porosity/permeability model"</a>, <b>Computer Methods in Applied Mechanics and Engineering Journal</b>, 352: 508-560, 2019
 [<a
 href="https://arxiv.org/abs/1805.01389" target="_blank">arXiv link</a>] 
 [<a href="#/"  onclick="toggle_visibility('DPP19');">Abstract</a>]
@@ -188,7 +190,7 @@ publisher={Elsevier}
 <li>A. M. Raheem, C. Vipulanandan, and <b>M. S. Joshaghani</b>, 
 <a href="https://www.sciencedirect.com/science/article/pii/S1674775516300907" target="-blank">
   "Non-destructive experimental testing and modeling of electrical impedance behavior of untreated and treated ultra-soft clayey soils"</a>,
-<b>Journal of Rock Mechanics and Geotechnical Engineering</b>, <b>9(3):</b> 543-550, 2017
+<b>Journal of Rock Mechanics and Geotechnical Engineering</b>, 9(3): 543-550, 2017
 [<a href="#/"  onclick="toggle_visibility('experiment17');">Abstract</a>]
 <div style="display:none" id="experiment17"><u>Abstract:</u><br>
 The characterization of ultra-soft clayey soil exhibits extreme challenges due to low shear strength of such material. Hence, inspecting the non-destructive electrical impedance behavior of untreated and treated ultra-soft clayey soils gains more attention. Both shear strength and electrical impedance were measured experimentally for both untreated and treated ultra-soft clayey soils. The shear strength of untreated ultra-soft clayey soil reached 0.17 kPa for 10% bentonite content, while the shear strengths increased to 0.27 kPa and 6.7 kPa for 10% bentonite content treated with 2% lime and 10% polymer, respectively. The electrical impedance of the ultra-soft clayey soil has shown a significant decrease from 1.6 kΩ to 0.607 kΩ when the bentonite content increased from 2% to 10% at a frequency of 300 kHz. The 10% lime and 10% polymer treatments have decreased the electrical impedances of ultra-soft clayey soil with 10% bentonite from 0.607 kΩ to 0.12 kΩ and 0.176 kΩ, respectively, at a frequency of 300 kHz. A new mathematical model has been accordingly proposed to model the non-destructive electrical impedance-frequency relationship for both untreated and treated ultra-soft clayey soils. The new model has shown a good agreement with experimental data with coefficient of determination (R2) up to 0.99 and root mean square error (RMSE) of 0.007 kΩ.
@@ -214,7 +216,7 @@ publisher={Elsevier}
 <li>M. M. R. Mousavi, M. D. Champiri, <b>M. S. Joshaghani</b>, and S. Sajjadi,
 <a href="https://www.aimspress.com/article/id/1147" target="-blank">
   "A kinematic measurement for ductile and brittle failure of materials using digital image correlation"</a>,
-<b>AIMS Materials Science</b>, <b>3(4):</b> 1759-1772, 2016 
+<b>AIMS Materials Science</b>, 3(4): 1759-1772, 2016 
 [<a href="#/"  onclick="toggle_visibility('brittle16');">Abstract</a>]
 <div style="display:none" id="brittle16"><u>Abstract:</u><br>
 This paper addresses some material level test which is done on quasi-brittle and ductile materials in the laboratory. The displacement control experimental program is composed of mortar cylinders under uniaxial compression shows quasi-brittle behavior and seemingly round-section aluminum specimens under uniaxial tension represents ductile behavior. Digital Image Correlation gives full field measurement of deformation in both aluminum and mortar specimens. Likewise, calculating the relative displacement of two points located on top and bottom of virtual LVDT, which is virtually placed on the surface of the specimen, gives us the classical measure of strain. However, the deformation distribution is not uniform all over the domain of specimens mainly due to imperfect nature of experiments and measurement devices. Displacement jumps in the fracture zone of mortar specimens and strain localization in the necking area for the aluminum specimen, which are reflecting different deformation values and deformation gradients, is compared to the other regions. Since the results are inherently scattered, it is usually non-trivial to smear out the stress of material as a function of a single strain value. To overcome this uncertainty, statistical analysis could bring a meaningful way to closely look at scattered results. A large number of virtual LVDTs are placed on the surface of specimens in order to collect statistical parameters of deformation and strain. Values of mean strain, standard deviation and coeffcient of variations for each material are calculated and correlated with the failure type of the corresponding material (either brittle or ductile). The main limiters for standard deviation and coeffcient of variations for brittle and ductile failure, in pre-peak and post-peak behavior are established and presented in this paper. These limiters help us determine whether failure is brittle or ductile without determining of stress level in the material. 
@@ -239,7 +241,7 @@ article{mousavi2016kinematic,
 <li>A. M. Raheem, and <b>M. S. Joshaghani</b>,
 <a href="http://www.journalijar.com/article/8883/modeling-of-shear-strength-water-content-relationship-of-ultra-soft-clayey-soil/" target="-blank">
   "Modeling of shears strength-water content relationship of ultra-soft clayey soil"</a>,
-<b>International Journal of Advanced Research</b>, <b>4(4):</b> 537-545, 2016
+<b>International Journal of Advanced Research</b>, 4(4): 537-545, 2016
 [<a href="#/"  onclick="toggle_visibility('shaer16');">Abstract</a>]
 <div style="display:none" id="shaer16"><u>Abstract:</u><br>
 In this study, a detailed review on the reported correlations of shear strength and physical properties of soft soil has been investigated. An ultra-soft soil has been prepared from 2% to 10% bentonite clay soil with high water content. The shear strength of the prepared ultra-soft soil has been tested using modified vane shear device. Based on collected data and experimental results, two new mathematical models for shear strength-water content relationship has been proposed for shear strength and water content ranged from 6 kPa to 0.1 kPa and 50% to 1100% respectively. The second proposed model was compared with several reported models from literature to demonstrate shear strength-water content relationship for ultra-soft soil with low shear strength and high water content. The second proposed model has shown a very good agreement with the experimental results with coefficient of determination (R2) up to 0.91.
@@ -265,11 +267,8 @@ year={2016}
    <b>M. S. Joshaghani</b>, A. M. Raheem, and M. M. R. Mousavi,
    <a href="http://pubs.sciepub.com/ajcea/4/3/5/index.html"
       target="-blank">
-     "Analytical modeling of large-scale testing of axial pipe-soil interaction in ultra-soft soil"</a>
-   <b>American Journal of Civil Engineering and Architecture</b>, <b>4(3):</b> 98-105, 2016
-   <b>M. S. Joshaghani</b>, and others,
-   "title",
-   submitted to <b>Journal</b>, year 
+     "Analytical modeling of large-scale testing of axial pipe-soil interaction in ultra-soft soil"</a>,
+   <b>American Journal of Civil Engineering and Architecture</b>, 4(3): 98-105, 2016
    [<a href="#/"  onclick="toggle_visibility('pipe16');">Abstract</a>]
    <div style="display:none" id="pipe16"><u>Abstract:</u><br>
 In this study, large-scale model test with dimensions of 2.4 m*2.4 m*1.8 m has been designed to investigate the behavior of axial pipe-soil interaction on the simulated ultra-soft seabed. Large-scale tests were performed on plastic pipes by loading the pipe from the ends, placed on ultra-soft clayey soil with undrained shear strength ranged from 0.01 kPa to 0.1 kPa, to quantify the axial soil-pipe interaction. An accurate remote gridding system was developed for displacement measurement. Two new models were used to correlate the shear strength with the water content of the ultra-soft soil. The models were verified with data points reported in the literature and experimental tests performed in the laboratory. The shear strength was correlated strongly with water content of ultra-soft soil with coefficient of correlation (R2) up to 0.91. Moreover, new analytical models were established to predict the axial break-out resistance and large-displacement residual resistance in ultra-soft soil. The new models have taken into account the effects of vertical loads (W), normalized initial embedment (δin), boundary length (λ), and the rate of axial loading (Vp). The new models have shown very good predictions for the experimental results with coefficient of correlation (R2) up to 0.87. Also, a new analytical model (p-q-m) was proposed to predict the force-displacement relationship for axial testing of pipe-soil interaction. This new model (p-q-m) has also shown a very good agreement with the experimental testing results for the full force-displacement response of pipe soil interaction. Detailed statistical procedure has been used to analyze the performance of both p-q and p-q-m models. The modified p-q model presents better estimation using any of the statistical methods.
@@ -294,8 +293,8 @@ year={2016}
 <li>
   C. Vipulanandan, J. A. Yahouide, and <b>M. S. Joshaghani</b>,
 <a href="https://ascelibrary.org/doi/10.1061/9780784413012.148" target="-blank">
-  "Deepwater axial and lateral sliding pipe-soil interaction model study"</a>
-  <b> Pipelines and Trenchless Construction and Renewals:</b> 
+  "Deepwater axial and lateral sliding pipe-soil interaction model study"</a>,
+  <b> Pipelines and Trenchless Construction and Renewals</b>,
   1583-1592, 2013 
   [<a href="#/"  onclick="toggle_visibility('axial13');">Abstract</a>]
   <div style="display:none" id="axial13"><u>Abstract:</u><br>
@@ -318,11 +317,11 @@ year={2013}
 
 </ol>
 <h3>In-Preparation</h3>
-<ol>
+<ol "ine-height:200">
 <li>
 <b>M. S. Joshaghani</b>, B. Riviere, and M. Sekachev,
 "A bound-preserving discontinuous
-Galerkin method for compressible two-phase flow.",
+Galerkin method for compressible two-phase flow"
 </li>
 
 
@@ -332,7 +331,6 @@ Galerkin method for compressible two-phase flow.",
 "Maximum-principle preserving discontinuous Galerkin
 schemes for convection-dominated PDEs: a brief survey"
 </li>
-
 
 
 <li>
@@ -393,13 +391,9 @@ institution = {University of Houston},
 
 
 
-
 <li>
 <i>"A maximum principle preserving finite element method with mass conservation property for solving two-phase flow in heterogeneous porous media"</i>,
 <u>13th Annual Meeting of the International Society for Porous Media (InterPore)</u>, Online Conference, June 2021. [oral presentation] </li>
-
-
-
 
 
 
@@ -419,44 +413,50 @@ institution = {University of Houston},
 
 
 <li><i>"A modeling framework for coupled plasticity and species diffusion with applications to degradation"</i>,
-<u>Engineering Mechanics Institute (EMI) Conference</u>,  Pasadena, CA, June 2019. [poster presentation]   </li>
+<u>Engineering Mechanics Institute (EMI) Conference</u>,  Pasadena, CA, June 2019. <a href="./Files/Poster_EMI19.pdf" target="_blank">[poster presentation]</a>
+</li>
 
 
+<li><i>"Mechanics at the interface",
+  </i> <u>Future Faculty Fellow program</u>,
+ Houston, TX,
+ May 2019. [oral presentation]
+</li>
 
 
-<li><i>"A scalable parallel implementation of double porosity/permeability model"
-  </i>,
+<li><i>"A scalable parallel implementation of double porosity/permeability model",
+  </i>
 <u> Society of Industrial and Applied Mathematics (SIAM) Conference on Mathematical and Computational Issues in the Geosciences</u>,
  Houston, TX,
  March 2019. [oral presentation]
 </li>
 
 
-<li><i>"On composable block solvers and performance spectrum model for the four-field double porosity/permeability model "
-  </i>,
- <u> Society of Industrial and Applied Mathematics (SIAM) Con- ference on Computer Science and Engineering </u>,
-Spokane, WA, Febreuary 2019. [poster presentation]
+<li><i>"On composable block solvers and performance spectrum model for the four-field double porosity/permeability model",
+  </i>
+ <u> Society of Industrial and Applied Mathematics (SIAM) Conference on Computer Science and Engineering </u>,
+Spokane, WA, Febreuary 2019. <a href="./Files/Poster_SIAM_CSE19.pdf" target="_blank">[poster presentation]</a>
 </li>
 
 
-<li><i>"Stabilized discontinuous Galerkin formulation for modeling flow in highly heterogeneous media with complex porous structures"
-  </i>,
+<li><i>"Stabilized discontinuous Galerkin formulation for modeling flow in highly heterogeneous media with complex porous structures",
+  </i>
  <u> Center for Thermo-Fluid Mechanics (CTFM) Seminar </u>,
 Houston, TX, October 2018. [invited talk]
 </li>
 
 
-<li><i>"A stabilized mixed DG formulation for flow in porous media with double pore-networks"
-  </i>,
+<li><i>"A stabilized mixed DG formulation for flow in porous media with double pore-networks",
+  </i>
  <u> Engineering Mechanics Institute (EMI) Conference </u>,
- Boston, MA, May 2018. [oral and poster presentation]
+ Boston, MA, May 2018. [oral and <a href="./Files/Poster_EMI18.pdf" target="_blank">[poster presentation]</a>
 </li>
 
 
-<li><i>"Finite element simulation of deep-water pipe walking phenomenon on ultra soft soil"
-  </i>,
+<li><i>"Finite element simulation of deep-water pipe walking phenomenon on ultra soft soil",
+  </i>
  <u> American Geophysical Union (AGU) Fall Meeting </u>
-San Francisco, CA, December 2014. [poster presentation]
+San Francisco, CA, December 2014. <a href="./Files/Poster_AGU14.pdf" target="_blank">[poster presentation]</a>
 </li>
 
 </body></html>
