--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     color:black;} 
   </style>
 <head><script type="text/javascript" src="http://livejs.com/live.js"></script>
+<link rel="stylesheet" type="text/css" href="Files/Sarraf.css">
 <title>Mohammad Sarraf Joshaghani's Webpage</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
@@ -17,12 +18,13 @@
             e.style.display = 'block';
       }
   </script>
-<h1><center>Mohammad Sarraf Joshaghani</center></h1>
+<h2><center>Mohammad Sarraf Joshaghani</center></h2>
 <blockquote>
-  <a href="index.html">Home</a> | 
-  <!-- <a href="gallery.html">Gallery of Research</a> | -->
+  <a href="index.html">HOME</a> | 
   <a href="Publications.html">Publications</a> |
-  <!-- <a href="personal.html">Personal Interests</a> -->
+  <a href="research.html">Research</a> |
+  <a href="Codes.html">Codes</a> |
+  <a href="teaching.html">Teaching</a> 
 </blockquote>
 <hr>
 <table border=0>
@@ -30,7 +32,7 @@
 <img src="Figures/mugshot.jpg" hspace="20" width=166px height=221.33px></td>
 <td valign="top">
 My name is Mohammad Sarraf Joshaghani, and I am currently a
-Postdoctoral Research Associate in the Department of Computational and Applied Mathematics (CAAM)
+Postdoctoral Research Associate and a Part-Time Lecturer in the Department of Computational and Applied Mathematics (CAAM)
 at Rice University working under the supervision of Professor 
 <a href="http://compm.rice.edu/people-2/team/" target="_blank" id="advisor">Beatrice M. Riviere</a>. 
 I obtained my PhD in Civil Engineering from the University of Houston and 
@@ -46,7 +48,7 @@ My research interests include the following:
 <li> Numerical methods</li>
 <li>Solvers and preconditioners</li>
 </ol>
-<a href="Files/Sarraf_CV.pdf" target="_blank">CV</a> |  
+<!-- <a href="Files/Sarraf_CV.pdf" target="_blank">CV</a> | -->  
 <a href="Files/Sarraf_PhD_Dissertation.pdf" target="_blank">PhD thesis</a> </p>
 </td>
 </tr>
