--- a/Publications.html
+++ b/Publications.html
@@ -19,7 +19,7 @@
   <a href="index.html">Home</a> | 
   <a href="Publications.html">PUBLICATIONS</a> |
   <a href="research.html">Research</a> |
-  <a href="Codes.html">Codes</a> |
+  <a href="codes.html">Codes</a> |
   <a href="teaching.html">Teaching</a> 
 </blockquote>
 <hr>
@@ -317,7 +317,7 @@ year={2013}
 
 </ol>
 <h3>In-Preparation</h3>
-<ol "ine-height:200">
+<ol>
 <li>
 <b>M. S. Joshaghani</b>, B. Riviere, and M. Sekachev,
 "A bound-preserving discontinuous
