--- a/codes.html
+++ b/codes.html
@@ -35,7 +35,7 @@
   <a href="index.html">Home</a> | 
   <a href="publications.html">Publications</a> |
   <a href="research.html">Research</a> |
-  <a href="Codes.html">CODES</a> |
+  <a href="codes.html">CODES</a> |
   <a href="teaching.html">Teaching</a> 
 </blockquote>
 <hr>
