--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <a href="index.html">HOME</a> | 
   <a href="Publications.html">Publications</a> |
   <a href="research.html">Research</a> |
-  <a href="Codes.html">Codes</a> |
+  <a href="codes.html">Codes</a> |
   <a href="teaching.html">Teaching</a> 
 </blockquote>
 <hr>
