--- a/teaching.html
+++ b/teaching.html
@@ -35,7 +35,7 @@
   <a href="index.html">Home</a> | 
   <a href="publications.html">Publications</a> |
   <a href="research.html">Research</a> |
-  <a href="Codes.html">Codes</a> | 
+  <a href="codes.html">Codes</a> | 
   <a href="teaching.html">TEACHING</a> 
 </blockquote>
 <hr>
