--- a/codes.html
+++ b/codes.html
@@ -313,7 +313,7 @@ institution = {University of Houston},
 </pre> </td></tr> </tbody></table> </div> 
 
 <div class="col-6">
-    <img src="Figures/Web/DPP.SVG" style="width: 90%">
+    <img src="Figures/Web/DPP.svg" style="width: 90%">
 </div></div> <hr>
 
 
