--- a/teaching.html
+++ b/teaching.html
@@ -33,7 +33,7 @@
 <h2><center>Teaching</center></h2>
 <blockquote>
   <a href="index.html">Home</a> | 
-  <a href="publications.html">Publications</a> |
+  <a href="Publications.html">Publications</a> |
   <a href="research.html">Research</a> |
   <a href="codes.html">Codes</a> | 
   <a href="teaching.html">TEACHING</a> 
