--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ was previously part of the Computational and Applied Mechanics Laboratory (CAML)
 <p>
 My research interests include the following:
 <ol>
-<li>Computational geoechanics</li>
+<li>Computational geomechanics</li>
 <li>Subsurface flow and transport modeling</li>
 <li>High performance and parallel computing</li>
 <li> Numerical methods</li>
