--- a/codes.html
+++ b/codes.html
@@ -46,7 +46,7 @@
     <h3 style="display:inline"><font color="rgb(0, 0, 44)">LimitedDG</font> </h3>&#8212 
     Code for the numerical solution of immiscible two-phase flows in porous media, which is obtained by augmenting interior penalty DG formulation with post-processing flux and slope limiters. Resulting solutions are accurate, robust, mesh-independent, mass-conservative, and maximum-principle satisfying. The repo entails several examples of pressure-driven flow and quarter-five spot that account for gravity, capillary effects, and heterogeneity.
   <p>
-  <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/LimiterDG"> https://github.com/msarrafj/LimiterDG</a></p> </font>
+  <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/LimiterDG" target="_blank"> https://github.com/msarrafj/LimiterDG</a></p> </font>
 
 <p>References:</p>
 
@@ -97,7 +97,7 @@ This paper proposes a fully implicit numerical scheme for immiscible incompressi
         <h3 style="display:inline"><font color="rgb(0, 0, 44)">VertexBased-FE </font></h3>&#8212 
      Code for a low-order numerical scheme that solves two-phase flows problems in heterogeneous porous media, The method is obtained by a first order finite element method equipped with mass-lumping and flux upwinding. The repo entails several examples of quarter-five spot problems and SPE10 problems in 2D and 3D settings.
   <p>
-  <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/Vertex_based_method">https://github.com/msarrafj/Vertex_based_method</a></font></p> 
+  <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/Vertex_based_method" target="_blank">https://github.com/msarrafj/Vertex_based_method</a></font></p> 
 
 <p>References:</p>
 
@@ -155,7 +155,7 @@ the method appealing to reservoir simulators are: (i) maximum principle is satis
         <h3 style="display:inline"><font color="rgb(0, 0, 44)">HPC-composableSolver</font> </h3>&#8212 
     Code for implementing recently developed block preconditioning strategies to solve the discrete systems that arise from double porosity/permeability model in 2D and 3D porous media. Implementation for three different finite element discretizations (classical mixed formulation with H(div) elements, stabilized continuous Galerkin mixed formulation, and stabilized discontinuous Galerkin mixed formulation) are provided to compare scalability of solver strategies for each case. Solvers are implemented seamlessly using the existing PETSc’s composable solver options.
   <p>
-  <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/HPC_composableSolver">https://github.com/msarrafj/HPC_composableSolver</a></font></p> 
+  <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/HPC_composableSolver" target="_blank">https://github.com/msarrafj/HPC_composableSolver</a></font></p> 
 
 <p>References:</p>
 
@@ -247,7 +247,7 @@ institution = {University of Houston},
         <h3 style="display:inline"><font color="rgb(0, 0, 44)">DPP-DG</font> </h3>&#8212 
         Code for a stabilized mixed DG formulation of double porosity/permeability (DPP) model, which describes the flow of a single-phase incompressible fluid in a rigid porous medium with two distinct pore-networks with possible mass transfer across them. The method provides accurate results even for disparate material properties, captures physical instabilities while eliminating numerical artifacts, and supports non-conforming discretizations. The repo entails codes for solving the coupled flow-transport problem (such as miscible displacement) in the heterogeneous porous medium.
   <p>
-  <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/Double_Porosity_Permeability">https://github.com/msarrafj/Double_Porosity_Permeability</a></font></p> 
+  <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/Double_Porosity_Permeability" target="_blank">https://github.com/msarrafj/Double_Porosity_Permeability</a></font></p> 
 
 <p>References:</p>
 
@@ -331,7 +331,7 @@ institution = {University of Houston},
         <h3 style="display:inline"><font color="rgb(0, 0, 44)">StableDegradation</font> </h3>&#8212 
         Code for diffusion-induced degradation/healing of solid materials that undergo (elastoplastic) deformation. Solver hinges on an optimization-based non-negative (NN) formulation that respects physical constraints. This code entails two different coupling strategies and two different degradation models.
   <p>
-  <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/Coupled-plasticity-diffusion">https://github.com/msarrafj/Coupled-plasticity-diffusion</a></font></p> 
+  <font color="rgb(0, 0, 44)">  Download from GitHub <a href="https://github.com/msarrafj/Coupled-plasticity-diffusion" target="_blank">https://github.com/msarrafj/Coupled-plasticity-diffusion</a></font></p> 
 
 <p>References:</p>
 
